--- a/fadverse-db/package.json
+++ b/fadverse-db/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "platziverse-db",
+  "name": "fadverse-db",
   "version": "1.0.0",
   "private": "true",
   "description": "Una simple plataforma de IoT. Este es el modulo de base de datos",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "setup": "DEBUG=fadverse:* node src/setup.js",
     "lint": "standard",
