--- a/fadverse-api/package.json
+++ b/fadverse-api/package.json
@@ -24,6 +24,8 @@
   "devDependencies": {
     "ava": "^3.10.1",
     "nodemon": "^2.0.4",
+    "proxyquire": "^2.1.3",
+    "sinon": "^9.0.2",
     "standard": "^14.3.4",
     "supertest": "^4.0.2"
   },
@@ -32,7 +34,9 @@
     "debug": "^4.1.1",
     "express": "^4.17.1",
     "express-asyncify": "^1.0.1",
+    "express-jwt": "^6.0.0",
     "fadverse-db": "file:../fadverse-db",
+    "jsonwebtoken": "^8.5.1",
     "utils": "file:../utils"
   }
 }
