--- a/fadverse-web/package.json
+++ b/fadverse-web/package.json
@@ -1,15 +1,13 @@
 {
-  "name": "fadverse-api",
+  "name": "fadverse-web",
   "version": "1.0.0",
-  "private": true,
-  "description": "A simple IoT platform - API",
+  "description": "A simple IoT platform - Web Dashboard",
   "main": "server.js",
   "scripts": {
-    "test": "DEBUG=fadverse:* ava tests/* --verbose",
-    "lint": "standard",
-    "fix": "standard --fix",
     "start": "NODE_ENV=production node server.js",
-    "dev": "DEBUG=fadverse:* nodemon server.js"
+    "dev": "DEBUG=fadverse:* nodemon server.js",
+    "lint": "standard",
+    "fix": "standard --fix"
   },
   "repository": {
     "type": "git",
@@ -22,22 +20,14 @@
   },
   "homepage": "https://github.com/FAD95/Curso_Avanzado_de_Node.js#readme",
   "devDependencies": {
-    "ava": "^3.10.1",
     "nodemon": "^2.0.4",
-    "proxyquire": "^2.1.3",
-    "sinon": "^9.0.2",
-    "standard": "^14.3.4",
-    "supertest": "^4.0.2"
+    "standard": "^14.3.4"
   },
   "dependencies": {
     "chalk": "^4.1.0",
     "debug": "^4.1.1",
     "express": "^4.17.1",
-    "express-asyncify": "^1.0.1",
-    "express-jwt": "^6.0.0",
-    "express-jwt-permissions": "^1.3.3",
-    "fadverse-db": "file:../fadverse-db",
-    "jsonwebtoken": "^8.5.1",
-    "utils": "file:../utils"
+    "fadverse-agent": "file:../fadverse-agent",
+    "socket.io": "^2.3.0"
   }
 }
