Conexion entre web, mqtt y eventEmitter

--- a/fadverse-web/package.json
+++ b/fadverse-web/package.json
@@ -27,7 +27,10 @@
     "chalk": "^4.1.0",
     "debug": "^4.1.1",
     "express": "^4.17.1",
+    "express-asyncify": "^1.0.1",
     "fadverse-agent": "file:../fadverse-agent",
+    "request": "^2.88.2",
+    "request-promise-native": "^1.0.8",
     "socket.io": "^2.3.0"
   }
 }
