--- a/fadverse-web/package.json
+++ b/fadverse-web/package.json
@@ -2,13 +2,13 @@
   "name": "fadverse-web",
   "version": "1.0.0",
   "description": "A simple IoT platform - Web Dashboard",
-  "main": "server.js",
+  "main": "src/server.js",
   "scripts": {
-    "start": "NODE_ENV=production node server.js",
-    "dev": "npm run prestart-dev && DEBUG=fadverse:* nodemon server.js",
+    "start": "NODE_ENV=production node src/server.js",
+    "dev": "npm run prestart-dev && DEBUG=fadverse:* nodemon src/server.js",
     "prestart": "npm run build",
     "prestart-dev": "npm run build",
-    "build": "browserify -t babelify -t vueify client/app.js -o public/bundle.js",
+    "build": "browserify -t babelify -t vueify client/app.js -o src/public/bundle.js",
     "lint": "standard",
     "fix": "standard --fix"
   },
@@ -31,15 +31,28 @@
     "vueify": "^9.4.1"
   },
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.19.0",
     "chalk": "^4.1.0",
     "chart.js": "^2.9.3",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.5",
     "debug": "^4.1.1",
+    "ejs": "^3.1.3",
     "express": "^4.17.1",
     "express-asyncify": "^1.0.1",
+    "express-session": "^1.17.1",
     "fadverse-agent": "file:../fadverse-agent",
     "fadverse-utils": "file:../fadverse-utils",
     "moment": "^2.27.0",
+    "mongoose": "^5.9.25",
+    "morgan": "^1.10.0",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "random-material-color": "^1.0.5",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-engine": "^4.5.1",
     "request": "^2.88.2",
     "request-promise-native": "^1.0.8",
     "socket.io": "^2.3.0",
